src/app/components/sections/services/services.scss
.services {
  padding-top: 60px;
  justify-content: flex-start;

  .services-intro {
    margin: 80px 0 100px 0;
    gap: 10px;
    .services-intro-description {
      text-align: center;
    }
  }
  .servces-list-item {
    gap: 250px;
    .services-items {
      min-height: 5px;
      max-width: 1058px;
      width: 100%;
      transition: all 0.2s ease;
      gap: 200px;
      .services-image {
        width: 404.542px;
        height: 266px;
        flex-shrink: 0;
        background: var(--card-background);
        border-radius: 0 133px 133px 0;
        border: 1px solid var(--card-background);

        .image-main {
          overflow: hidden;
          width: inherit;
          height: inherit;
          border-radius: inherit;
          .image-demo {
            width: 100%;
            height: 100%;
            -o-object-fit: cover;
            object-fit: cover;
            transition: transform 0.2s ease-in-out;
            &:hover {
              transform: scale(1.1);
            }
          }
        }
      }
      .item-info-text {
        gap: 30px;
        .info-title {
          gap: 10px;
        }
      }
    }
  }
}

.servces-list-item {
  gap: 100px;
}

@media (max-width: 1024px) {
  .services {
    .services-items {
      gap: 100px;
      .services-image {
        width: 350px;
      }
    }
  }
}

@media (max-width: 768px) {
  .services {
    padding: 30px;
    .services-items {
      flex-direction: column;
      .services-image {
        display: none;
      }
    }
  }
}

